# python-trading-toolbox

./: .gitignore  README.md
project_kiwoom_trading/: auto_stock_1.py  auto_stock_2_kiwoom_api_1.py  auto_stock_2_kiwoom_api_2.py  auto_stock_3_pyqt_1.py  auto_stock_slack_request.py  gui.ui  main.py  pyproject.toml
project_stock_forecasting/: main.py  predict_2year_stock.py  pyproject.toml
