[project]
name = "60-python-auto-stock"
version = "0.1.0"
description = "Kiwoom OpenAPI+ 32bit env"
requires-python = "==3.8.*"
dependencies = [
  "pykiwoom==0.1.6",
  "pyqt5<5.16",
  "pyqt5-sip<13",
  "pandas==1.1.5",
  "numpy==1.19.5",
  "pyqt5designer>=5.14.1",
  "pykrx>=1.0.51",
]

[tool.uv]
required-environments = ["sys_platform == 'win32'"]

[tool.uv.workspace]
members = [
    "venv64",
]
